@@ -9,6 +9,8 @@ Version 2.0.0rc8 - The "???????????" version.
 	Phoenix:
 		* Added readline and history support to amuleweb/amulecmd text
 		  clients.
+		* Added template loading capability to amuleweb with the new
+		  command line parameter -t.
 
 	GonoszTopi:
 		* Initial work on EC protocol version 2.0
